# africastalking_rust

./: Cargo.toml  README.md
code_samples/airtime/: find_airtime_transaction_status_async.md  send_airtime_async.md
code_samples/mobile_data/: find_mobile_data_transaction_async.md  send_mobile_data_async.md
code_samples/sms/: create_sms_subscriptions_async.md  delete_subscription_async.md  fetch_sms_messages_async.md  fetch_sms_subscriptions_async.md  send_bulk_message_async.md  send_premium_message_async.md
examples/example_1/: Cargo.toml  README.md
examples/example_1/src/: airtime.rs  main.rs  sms.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: airtime.rs  main.rs  mobile_data.rs  sms.rs
src/: airtime.rs  lib.rs  mobiledata.rs  models.rs  sms.rs  utils.rs
src/airtime/: find_transaction_status.rs  send_airtime.rs
src/mobile_data/: find_transaction.rs  send_mobile_data.rs
src/models/: models.rs
src/sms/bulk/: send_sms.rs
src/sms/fetch_messages/: fetch_messages.rs
src/sms/premium/: create_subscription.rs  delete_subscription.rs  fetch_subscriptions.rs  send_sms.rs
src/util/: util.rs
