[package]
name = "africastalking_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde_json = "1.0.105"
serde_urlencoded = "0.7.1"
chrono = "0.4.26"
base64 = "0.21.2"

